<?xml version="1.0"?>
<package>
  <name>shmfw</name>
  <version>0.0.0</version>
  <description>The shmfw meta package</description>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>shmfw_visualization_marker</run_depend>
  <run_depend>shmfw_laser_scan</run_depend>
  <export>
        <metapackage/>
  </export>
</package>
